[root layer scrolls] Fix IntersectionObserver for RLS

BUG=773369
R=skobes@chromium.org,pdr@chromium.org

Change-Id: I6ddb98aa8ebd06a313cb8ebb46a18e9658575739
Reviewed-on: https://chromium-review.googlesource.com/740364
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: Stefan Zager <szager@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511997}
Former-commit-id: 58b9194706686b68e98f14eae4f368605a9d0744