third_party/WebKit/Source/core/layout/IntersectionGeometry.cpp
@@ -113,7 +113,8 @@ void IntersectionGeometry::InitializeTargetRect() {
 }
 
 void IntersectionGeometry::InitializeRootRect() {
-  if (root_->IsLayoutView()) {
+  if (root_->IsLayoutView() &&
+      !RuntimeEnabledFeatures::RootLayerScrollingEnabled()) {
     root_rect_ =
         LayoutRect(ToLayoutView(root_)->GetFrameView()->VisibleContentRect());
     root_->MapToVisualRectInAncestorSpace(nullptr, root_rect_);
@@ -148,12 +149,11 @@ void IntersectionGeometry::ClipToRoot() {
   // TODO(szager): the writing mode flipping needs a test.
   LayoutBox* ancestor = ToLayoutBox(root_);
   does_intersect_ = target_->MapToVisualRectInAncestorSpace(
-      (RootIsImplicit() ? nullptr : ancestor), intersection_rect_,
-      kEdgeInclusive);
-  if (ancestor && ancestor->HasOverflowClip())
-    intersection_rect_.Move(-ancestor->ScrolledContentOffset());
+      ancestor, intersection_rect_, kEdgeInclusive);
   if (!does_intersect_)
     return;
+  if (ancestor->HasOverflowClip())
+    intersection_rect_.Move(-ancestor->ScrolledContentOffset());
   LayoutRect root_clip_rect(root_rect_);
   if (ancestor)
     ancestor->FlipForWritingMode(root_clip_rect);
@@ -196,6 +196,8 @@ void IntersectionGeometry::MapIntersectionRectToTargetFrameCoordinates() {
 void IntersectionGeometry::ComputeGeometry() {
   if (!CanComputeGeometry())
     return;
+  DCHECK(root_);
+  DCHECK(target_);
   ClipToRoot();
   MapTargetRectToTargetFrameCoordinates();
   if (does_intersect_)
